@@ -14,7 +14,8 @@ no_categories_for_chooser "No Sites are defined.  You must add a Site before you
   story_save                    "Saved version $version of Story $story_id (URL: $url)."
   story_delete                  "Deleted Story $story_id (URL: $url)."
   story_checked_in_during_edit  "Story $id was checked in by another user or window while it was open here! (Changes made here were not saved.)"
-  story_stolen_during_edit      "Story $id was stolen by $thief while you were editing it! (Your changes were not saved.)"
+  story_stolen_during_edit      "Story $id was stolen by user $thief while you were editing it! (Your changes were not saved.)"
+  story_stolen_before_checkout  "Story $id was checked out by user $thief while you were trying to check it out!"
   story_deleted_during_edit     "Story $id was deleted by another user or window while you were editing it here!"
   story_saved_in_other_window   "Story $id was saved in another window while you were editing it here. (Changes made here were not saved.)"
   duplicate_category            "Cannot add category because the chosen category is already associated with the story."
