@@ -2,6 +2,18 @@
 
 This document contains a list of changes for each release of Krang.
 
+=head2 3.06 - In Development
+
+=over
+
+=item *
+
+Fixed ISE that occurs if you try to check out a story that was checked out by someone
+else while you were looking at (normally prevented by the UI). Now you get a helpful
+alert message instead. [Michael Peters]
+
+=back
+
 =head2 3.05 - March 15, 2009
 
 =over
